--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "body-parser": "^1.20.2",
+    "nodemon": "^2.0.21",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
