--- a/client/package.json
+++ b/client/package.json
@@ -7,16 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "daisyui": "^2.51.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
+    "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "body-parser": "^1.20.2",
-    "nodemon": "^2.0.21",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
